# SEA_ejemplosT2

./: .gitignore  README.md
2_1_1_bash/: README.md  imprimir.sh
2_2_1_gcc/: README.md  main.c  operaciones.c  operaciones.h  warnings.c
2_3_1_gdbexample/: Makefile  README.md  example.c
2_4_1_static_libs/: Makefile  README.md  example.c
2_4_2_dynamic_libs/: Makefile  README.md
2_4_2_dynamic_libs/include/: multiplicacion.h  suma.h
2_4_2_dynamic_libs/src/: multiplicacion.c
2_5_1_cmake/: CMakeLists.txt  README.md
2_5_1_cmake/src/: suma.c
